--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Flask==2.3.2
-Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.0.5
-Flask-CORS==4.0.0
-gunicorn==21.2.0
-Werkzeug==2.3.6
+flask
+flask-restful
+flask-sqlalchemy
+flask-cors
+gunicorn
